src/styles/global.css
* {
	box-sizing: border-box;
}

:root {
	--wine-red: #521407;
	--peachy-pink: #F9D4D2;
	--dusty-pink: #C6B9BA;
	--black: #222222;
	--white: #FEFEFE;
	--grey-light: #F3F3F3;
	--grey-dark: #616161;
	--dark-blue: #1A1852;
	--dark-green: #1F391B;

	--margin-sm: 0.625em;
	--margin-md: 1em;
	--margin-lg: 1.5em;
	--margin-xl: 2em;

	--max-page-width: 90rem;
	--page-margin: clamp(1.5rem, calc(1.5rem + (5 - 1.5) * ((100vw - 25rem) / (75 - 25))), 5rem);
	--page-width: calc(min(100vw, var(--max-page-width)) - var(--page-margin) * 2);


	--border-radius: 0.75em; 

	--accent: #2337ff;
	--accent-dark: #000d8a;
	--gray-gradient: var(--wine-red), var(--peachy-pink);
	--box-shadow:
		0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%), 0 16px 32px
		rgba(var(--gray), 33%);
}

body {
	font-family: "Fira sans", sans-serif;
	margin: 0;
	padding: 0;
	text-align: left;
	/*background: linear-gradient(var(--gray-gradient)) no-repeat;
	background-size: 100% 600px;*/
	background-color: var(--wine-red);
	word-wrap: break-word;
	overflow-wrap: break-word;
	color: var(--black);
	font-size: 1em;
	line-height: 1.7;
}
main {

	width: var(--page-width);
	margin: auto;
	padding: 2em 1em;
}
h1,
h2,
h3,
h4,
h5,
h6 {
	font-family: "Caprasimo", serif;
	font-weight: 400;
	font-style: normal;
	margin: 0 0 0.5rem 0;
	color: var(--wine-red);
	line-height: 1.2;
}
h1 {
	font-size: 6em;
}
h2 {
	font-size: 3em;
}
h3 {
	font-size: 2em;
}
h4 {
	font-size: 1.5em;
}
h5 {
	font-size: 1.25em;
}
strong,
b {
	font-weight: 700;
}
a {
	color: var(--dark-blue);
}
a:hover {
	color: var(--dark-green);
}
p {
	margin-bottom: 1em;
}
.prose p {
	margin-bottom: 2em;
}

.text-small {
	margin-bottom: 0.5em;
	font-size: 0.75em;
	line-height: 1.5;
}

main {
	background-color: var(--peachy-pink);
}
.wine-red {
	background-color: var(--wine-red);
}
.peachy-pink {
	background-color: var(--peachy-pink);
}

.portfolio-list {
	list-style-type: none;
	margin-block-start: 0;
	margin-block-end: 0;
	padding-inline-start: 0;
	display: flex;
	flex-direction: column;
	gap: var(--margin-md)
}

textarea {
	width: 100%;
	font-size: 16px;
}
input {
	font-size: 16px;
}
table {
	width: 100%;
}
img {
	max-width: 100%;
	height: auto;
}
code {
	padding: 2px 5px;
	background-color: rgb(var(--gray-light));
	border-radius: 2px;
}
pre {
	padding: 1.5em;
	border-radius: 8px;
}
pre > code {
	all: unset;
}
blockquote {
	border-left: 4px solid var(--accent);
	padding: 0 0 0 20px;
	margin: 0px;
	font-size: 1.333em;
}
hr {
	border: none;
	border-top: 1px solid rgb(var(--gray-light));
}

/*
@media (max-width: 600px) {
	main {
		padding: 1em;
	}
}

@media (max-width: 720px) {
	main {
		padding: 1em;
	}
}
*/

.sr-only {
	border: 0;
	padding: 0;
	margin: 0;
	position: absolute !important;
	height: 1px;
	width: 1px;
	overflow: hidden;
	/* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
	clip: rect(1px 1px 1px 1px);
	/* maybe deprecated but we need to support legacy browsers */
	clip: rect(1px, 1px, 1px, 1px);
	/* modern browsers, clip-path works inwards from each corner */
	clip-path: inset(50%);
	/* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
	white-space: nowrap;
}

